fix(material/datepicker): remove scroll bar while animating in touch UI mode (#21493)
The screen reader close button is rendered outside the dialog which seems to cause a
scrollbar to be shown while the animation is running. These changes fix the issue by
hiding the button while the dialog is animating.

--- a/src/material/datepicker/datepicker-content.scss
+++ b/src/material/datepicker/datepicker-content.scss
@@ -38,6 +38,12 @@ $mat-datepicker-touch-max-height: 788px;
     top: 100%;
     left: 0;
     margin-top: 8px;
+
+    // Hide the button while the overlay is animating, because it's rendered
+    // outside of it and it seems to cause scrollbars in some cases (see #21493).
+    .ng-animating & {
+      display: none;
+    }
   }
 }
 
